docs: Improve API docs and readme.
